--- a/src/main/resources/HomePage.fxml
+++ b/src/main/resources/HomePage.fxml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.gluonhq.charm.glisten.control.Avatar?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.ScrollPane?>
 <?import javafx.scene.control.SplitPane?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.image.Image?>
@@ -13,19 +15,19 @@
    <children>
       <VBox prefHeight="865.0" prefWidth="1219.0">
          <children>
-            <AnchorPane prefHeight="97.0" prefWidth="1219.0" style="-fx-background-color: white; -fx-border-style: hidden hidden solid hidden; -fx-border-width: 1; -fx-border-color: lightgray;">
+            <AnchorPane prefHeight="78.0" prefWidth="1219.0" style="-fx-background-color: white; -fx-border-style: hidden hidden solid hidden; -fx-border-width: 1; -fx-border-color: lightgray;">
                <children>
-                  <ImageView fitHeight="113.0" fitWidth="114.0" layoutX="32.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="91.0" fitWidth="113.0" layoutX="32.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@blue.jpg" />
                      </image>
                   </ImageView>
-                  <Avatar layoutX="1112.0" layoutY="23.0" radius="35.0">
+                  <Label fx:id="labelHelloUser" alignment="CENTER_RIGHT" layoutX="754.0" layoutY="41.0" prefHeight="18.0" prefWidth="332.0" text="Witaj, %s %s" />
+                  <ImageView fitHeight="67.0" fitWidth="71.0" layoutX="1112.0" layoutY="16.0" pickOnBounds="true" preserveRatio="true">
                      <image>
                         <Image url="@Pet_Doctor-512.png" />
                      </image>
-                  </Avatar>
-                  <Label layoutX="1049.0" layoutY="50.0" text="Label" />
+                  </ImageView>
                </children>
             </AnchorPane>
             <VBox prefHeight="753.0" prefWidth="1219.0">
@@ -46,14 +48,26 @@
                            <children>
                               <TitledPane animated="false" prefHeight="677.0" prefWidth="399.0" text="Pacjenci">
                                 <content>
-                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                       <children>
+                                          <ScrollPane layoutX="-4.0" prefHeight="593.0" prefWidth="399.0">
+                                            <content>
+                                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="609.0" prefWidth="398.0">
+                                                   <children>
+                                                      <ListView fx:id="patientList" prefHeight="589.0" prefWidth="395.0" />
+                                                   </children>
+                                                </AnchorPane>
+                                            </content>
+                                          </ScrollPane>
+                                          <Button layoutX="280.0" layoutY="609.0" mnemonicParsing="false" onAction="#OnAddPatient" style="-fx-background-color: lightblue;" text="Dodaj pacjenta" />
+                                       </children></AnchorPane>
                                 </content>
                               </TitledPane>
                            </children>
                         </AnchorPane>
                         <AnchorPane prefHeight="158.0" prefWidth="546.0">
                            <children>
-                              <TitledPane animated="false" prefHeight="675.0" prefWidth="411.0" text="Idk co">
+                              <TitledPane animated="false" prefHeight="675.0" prefWidth="411.0" text="Wizyty">
                                 <content>
                                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
                                 </content>
