--- a/src/main/resources/HomePage.fxml
+++ b/src/main/resources/HomePage.fxml
@@ -69,7 +69,10 @@
                            <children>
                               <TitledPane animated="false" prefHeight="675.0" prefWidth="411.0" text="Wizyty">
                                 <content>
-                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" />
+                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="618.0" prefWidth="409.0">
+                                       <children>
+                                          <Button fx:id="addVisit" mnemonicParsing="false" onAction="#OnAddVisit" text="Add Visit" />
+                                       </children></AnchorPane>
                                 </content>
                               </TitledPane>
                            </children>
