--- a/src/main/resources/AddVisitPage.fxml
+++ b/src/main/resources/AddVisitPage.fxml
@@ -2,7 +2,6 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -13,7 +12,7 @@
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="608.0" prefWidth="1001.0" style="-fx-background-color: #f1f1f3;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.AddVisitFxController">
+<AnchorPane fx:id="scene" prefHeight="608.0" prefWidth="1001.0" style="-fx-background-color: #f1f1f3;" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.AddVisitFxController">
    <children>
       <ImageView fitHeight="689.0" fitWidth="456.0" layoutX="600.0" pickOnBounds="true" preserveRatio="true">
          <image>
@@ -22,13 +21,12 @@
       </ImageView>
       <VBox layoutX="61.0" layoutY="30.0" prefHeight="596.0" prefWidth="476.0">
          <children>
-            <HBox alignment="CENTER_RIGHT" prefHeight="2.0" prefWidth="476.0">
+            <HBox fx:id="dateHBox" alignment="CENTER_RIGHT" prefHeight="2.0" prefWidth="476.0">
                <children>
                   <Label text="Date">
                      <HBox.margin>
                         <Insets right="15.0" />
                      </HBox.margin></Label>
-                  <DatePicker prefHeight="25.0" prefWidth="170.0" />
                </children>
                <VBox.margin>
                   <Insets top="25.0" />
@@ -131,12 +129,12 @@
       </VBox>
       <HBox alignment="CENTER" layoutX="59.0" layoutY="633.0" prefHeight="5.0" prefWidth="476.0">
          <children>
-            <Button mnemonicParsing="false" style="-fx-background-color: lightblue;" text="Add">
+            <Button mnemonicParsing="false" onAction="#OnVisitAdd" style="-fx-background-color: lightblue;" text="Add">
                <HBox.margin>
                   <Insets left="25.0" right="25.0" top="10.0" />
                </HBox.margin>
             </Button>
-            <Button mnemonicParsing="false" style="-fx-background-color: lightblue;" text="Cancel">
+            <Button mnemonicParsing="false" onAction="#OnCancel" style="-fx-background-color: lightblue;" text="Cancel">
                <HBox.margin>
                   <Insets left="25.0" right="25.0" top="10.0" />
                </HBox.margin>
