--- a/src/main/resources/HomePage.fxml
+++ b/src/main/resources/HomePage.fxml
@@ -1,21 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.control.SplitPane?>
-<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.control.TableColumn?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="865.0" prefWidth="1219.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.HomeFxController">
+<AnchorPane prefHeight="799.0" prefWidth="1219.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="app.HomeFxController">
    <children>
-      <VBox prefHeight="865.0" prefWidth="1219.0">
+      <VBox prefHeight="831.0" prefWidth="1219.0">
          <children>
-            <AnchorPane prefHeight="78.0" prefWidth="1219.0" style="-fx-background-color: white; -fx-border-style: hidden hidden solid hidden; -fx-border-width: 1; -fx-border-color: lightgray;">
+            <AnchorPane prefHeight="78.0" prefWidth="1219.0" style="-fx-background-color: white;">
                <children>
                   <ImageView fitHeight="91.0" fitWidth="113.0" layoutX="32.0" layoutY="1.0" pickOnBounds="true" preserveRatio="true">
                      <image>
@@ -28,60 +31,110 @@
                         <Image url="@Pet_Doctor-512.png" />
                      </image>
                   </ImageView>
+                  <Button layoutX="418.0" layoutY="41.0" mnemonicParsing="false" onAction="#OnAddPatient" style="-fx-background-color: lightblue;" text="Add Patient" />
+                  <Button fx:id="addVisit" layoutX="542.0" layoutY="41.0" mnemonicParsing="false" onAction="#OnAddVisit" style="-fx-background-color: lightblue;" text="Add Visit" />
                </children>
             </AnchorPane>
-            <VBox prefHeight="753.0" prefWidth="1219.0">
+            <VBox prefHeight="658.0" prefWidth="1219.0">
                <children>
-                  <AnchorPane prefHeight="200.0" prefWidth="200.0" />
-                  <SplitPane dividerPositions="0.33, 0.66" prefHeight="677.0" prefWidth="1219.0">
-                    <items>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="158.0" prefWidth="578.0">
-                           <children>
-                              <TitledPane animated="false" prefHeight="675.0" prefWidth="399.0" text="Dyżury">
-                                <content>
-                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="649.0" prefWidth="445.0" />
-                                </content>
-                              </TitledPane>
-                           </children>
-                        </AnchorPane>
-                      <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="675.0" prefWidth="451.0">
-                           <children>
-                              <TitledPane animated="false" prefHeight="677.0" prefWidth="399.0" text="Pacjenci">
-                                <content>
-                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                  <AnchorPane prefHeight="200.0" prefWidth="1219.0">
+                     <children>
+                        <ScrollPane prefHeight="662.0" prefWidth="1219.0" style="-fx-border-style: hidden hidden hidden hidden;">
+                          <content>
+                            <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="657.0" prefWidth="1215.0" style="-fx-border-style: hidden hidden hidden hidden;">
+                                 <children>
+                                    <VBox layoutX="6.0" prefHeight="662.0" prefWidth="1207.0">
                                        <children>
-                                          <ScrollPane layoutX="-4.0" prefHeight="593.0" prefWidth="399.0">
-                                            <content>
-                                              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="609.0" prefWidth="398.0">
-                                                   <children>
-                                                      <ListView fx:id="patientList" prefHeight="589.0" prefWidth="395.0" />
-                                                   </children>
-                                                </AnchorPane>
-                                            </content>
-                                          </ScrollPane>
-                                          <Button layoutX="280.0" layoutY="609.0" mnemonicParsing="false" onAction="#OnAddPatient" style="-fx-background-color: lightblue;" text="Dodaj pacjenta" />
-                                       </children></AnchorPane>
-                                </content>
-                              </TitledPane>
-                           </children>
-                        </AnchorPane>
-                        <AnchorPane prefHeight="158.0" prefWidth="546.0">
-                           <children>
-                              <TitledPane animated="false" prefHeight="675.0" prefWidth="411.0" text="Wizyty">
-                                <content>
-                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="618.0" prefWidth="409.0">
-                                       <children>
-                                          <Button fx:id="addVisit" mnemonicParsing="false" onAction="#OnAddVisit" text="Add Visit" />
-                                       </children></AnchorPane>
-                                </content>
-                              </TitledPane>
-                           </children>
-                        </AnchorPane>
-                    </items>
-                  </SplitPane>
-                  <AnchorPane prefHeight="200.0" prefWidth="1219.0" />
+                                          <Label layoutX="20.0" layoutY="10.0" prefHeight="20.0" prefWidth="1184.0" style="-fx-border-color: lightgray; -fx-border-style: hidden hidden solid hidden;" text="Upcoming Shifts">
+                                             <VBox.margin>
+                                                <Insets left="25.0" right="25.0" top="15.0" />
+                                             </VBox.margin>
+                                             <padding>
+                                                <Insets bottom="10.0" />
+                                             </padding>
+                                             <font>
+                                                <Font size="16.0" />
+                                             </font>
+                                          </Label>
+                                          <HBox alignment="CENTER_LEFT" prefHeight="26.0" prefWidth="219.0">
+                                             <children>
+                                                <Label text="Filter:">
+                                                   <HBox.margin>
+                                                      <Insets right="15.0" />
+                                                   </HBox.margin>
+                                                </Label>
+                                                <TextField fx:id="shiftsFilter" promptText="search" />
+                                             </children>
+                                             <VBox.margin>
+                                                <Insets left="25.0" right="25.0" top="15.0" />
+                                             </VBox.margin>
+                                          </HBox>
+                                          <TableView fx:id="shiftsTableView" prefHeight="200.0" prefWidth="200.0" style="-fx-alignment: CENTER;" tableMenuButtonVisible="true">
+                                            <columns>
+                                              <TableColumn fx:id="shiftStartDateCol" prefWidth="75.0" style="-fx-alignment: CENTER;" text="Start Date" />
+                                              <TableColumn fx:id="shiftEndDateCol" prefWidth="75.0" style="-fx-alignment: CENTER;" text="End Date" />
+                                                <TableColumn fx:id="shiftStartHourCol" prefWidth="75.0" style="-fx-alignment: CENTER;" text="Start Hour" />
+                                                <TableColumn fx:id="shiftEndHourCol" prefWidth="75.0" style="-fx-alignment: CENTER;" text="End Hour" />
+                                                <TableColumn fx:id="shiftNameCol" prefWidth="75.0" style="-fx-alignment: CENTER;" text="Name" />
+                                                <TableColumn fx:id="shiftSurnameCol" prefWidth="75.0" style="-fx-alignment: CENTER;" text="Surname" />
+                                            </columns>
+                                             <VBox.margin>
+                                                <Insets left="25.0" right="25.0" top="10.0" />
+                                             </VBox.margin>
+                                             <columnResizePolicy>
+                                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                             </columnResizePolicy>
+                                          </TableView>
+                                          <Label layoutX="35.0" layoutY="10.0" prefHeight="20.0" prefWidth="1184.0" style="-fx-border-color: lightgray; -fx-border-style: hidden hidden solid hidden;" text="Visits today">
+                                             <VBox.margin>
+                                                <Insets left="25.0" right="25.0" top="15.0" />
+                                             </VBox.margin>
+                                             <padding>
+                                                <Insets bottom="10.0" />
+                                             </padding>
+                                             <font>
+                                                <Font size="16.0" />
+                                             </font>
+                                          </Label>
+                                          <HBox alignment="CENTER_LEFT" layoutX="10.0" layoutY="65.0" prefHeight="2.0" prefWidth="1189.0">
+                                             <children>
+                                                <Label text="Filter:">
+                                                   <HBox.margin>
+                                                      <Insets right="15.0" />
+                                                   </HBox.margin>
+                                                </Label>
+                                                <TextField fx:id="visitsFilter" promptText="search" />
+                                             </children>
+                                             <VBox.margin>
+                                                <Insets left="25.0" right="25.0" top="15.0" />
+                                             </VBox.margin>
+                                          </HBox>
+                                          <TableView fx:id="visitsTableView" prefHeight="216.0" prefWidth="1139.0">
+                                            <columns>
+                                              <TableColumn fx:id="visitHourCol" prefWidth="75.0" text="Hour" />
+                                                <TableColumn fx:id="visitVetCol" prefWidth="75.0" text="Vet" />
+                                              <TableColumn fx:id="visitPetCol" prefWidth="75.0" text="Pet Name" />
+                                                <TableColumn fx:id="visitSpeciesCol" prefWidth="75.0" text="Species" />
+                                                <TableColumn fx:id="visitBreedCol" prefWidth="75.0" text="Breed" />
+                                                <TableColumn fx:id="visitOwnerCol" prefWidth="75.0" text="Owner" />
+                                            </columns>
+                                             <VBox.margin>
+                                                <Insets left="25.0" right="25.0" top="10.0" />
+                                             </VBox.margin>
+                                             <columnResizePolicy>
+                                                <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                                             </columnResizePolicy>
+                                          </TableView>
+                                       </children>
+                                    </VBox>
+                                 </children>
+                              </AnchorPane>
+                          </content>
+                        </ScrollPane>
+                     </children></AnchorPane>
                </children>
             </VBox>
+            <AnchorPane layoutX="10.0" layoutY="10.0" prefHeight="78.0" prefWidth="1219.0" style="-fx-background-color: white;" />
          </children>
       </VBox>
    </children>
