--- a/src/main/resources/HomePage.fxml
+++ b/src/main/resources/HomePage.fxml
@@ -77,6 +77,7 @@
                                                 <TableColumn fx:id="shiftEndHourCol" prefWidth="75.0" style="-fx-alignment: CENTER;" text="End Hour" />
                                                 <TableColumn fx:id="shiftNameCol" prefWidth="75.0" style="-fx-alignment: CENTER;" text="Name" />
                                                 <TableColumn fx:id="shiftSurnameCol" prefWidth="75.0" style="-fx-alignment: CENTER;" text="Surname" />
+                                                <TableColumn fx:id="shiftClinicCol" prefWidth="75.0" style="-fx-alignment: CENTER;" text="Clinic" />
                                             </columns>
                                              <VBox.margin>
                                                 <Insets left="25.0" right="25.0" top="10.0" />
