--- a/src/main/resources/HomePage.fxml
+++ b/src/main/resources/HomePage.fxml
@@ -33,6 +33,7 @@
                   </ImageView>
                   <Button layoutX="418.0" layoutY="41.0" mnemonicParsing="false" onAction="#OnAddPatient" style="-fx-background-color: lightblue;" text="Add Patient" />
                   <Button fx:id="addVisit" layoutX="542.0" layoutY="41.0" mnemonicParsing="false" onAction="#OnAddVisit" style="-fx-background-color: lightblue;" text="Add Visit" />
+                   <Button fx:id="addClinic" layoutX="650.0" layoutY="41.0" mnemonicParsing="false" onAction="#OnAddClinic" style="-fx-background-color: lightblue;" text="Add Clinic"/>
                </children>
             </AnchorPane>
             <VBox prefHeight="658.0" prefWidth="1219.0">
