--- a/src/main/resources/AddVisitPage.fxml
+++ b/src/main/resources/AddVisitPage.fxml
@@ -129,7 +129,7 @@
       </VBox>
       <HBox alignment="CENTER" layoutX="59.0" layoutY="633.0" prefHeight="5.0" prefWidth="476.0">
          <children>
-            <Button mnemonicParsing="false" onAction="#OnVisitAdd" style="-fx-background-color: lightblue;" text="Add">
+            <Button fx:id="addButton" mnemonicParsing="false" onAction="#OnVisitAdd" style="-fx-background-color: lightblue;" text="Add">
                <HBox.margin>
                   <Insets left="25.0" right="25.0" top="10.0" />
                </HBox.margin>
